# assignments

cpsc-251/: index.html
cpsc-520/: CPSC 520 Test 2 study guide.txt  Study Sheet - Final.doc
cpsc-532r/: homework1.doc  homework4.doc
cpsc-532r/homework2/: AUTHORS  ChangeLog  INSTALL  NEWS  README  autogen.sh  config.h.in  configure.ac
cpsc-532r/homework2/src/: Makefile.am  count.c  count.h  countwc.c  main.c
cpsc-533/: dual-cpu.dia  ht-cpu.dia  paper.abw  paper.odt  presentation.odp  presentation.ppt  resources.txt  single-cpu.dia
cpsc-542/: index.php  lib.php  main.css
csc3400-program1/: Doxyfile
csc3400-program2/: lim.c  lim.h  main.c  matrix.c  matrix.h  sets.c  sets.h  typescript
csc3400-program3/: typescript
csc3620-extras/: cobol-hilit.el  cobol.el
csc3620-program1/: exception.out  prog1.cob  prog1.lis  valid.out  writeup.txt
csc3620-program2/: prog2  prog2.cbl  prog2.cob
csc3620-program3/: prog3.cob
csc3620-program4/: HASHBUCKET.COB
csc4200-homework1/: 4200hw1.lyx  4200hw1.tex  networking-homework-draft.abw
csc4200-homework2/: homework2-draft.txt  homework2.tex  set2draft.txt
csc4200-program1/: README
csc4200-program2/: AUSTRALIA.MAP  FLOODING3  cnet_list.c  cnet_list.h  cnet_queue.c  cnet_queue.h  csc4200-program2.tex  flooding3.c
csc4240-program1/: .project  build.xml  manifest.txt  readme.txt
csc4240-program2/: .project  build.xml  manifest.txt
csc4240-program3/: .project  build.xml
csc4240-program4/: Makefile  readme.txt  test.sh
csc4700-test1/: 4700-test1.sxw  csc4700-test-draft.txt  csc4700-test1-scraps.txt
csc4700-test2/: final_exam.abw  question1.txt  question5.txt  question_2_draft.txt
csc4800/programs/p2/server/: configure  configure.ac
csc4800/programs/p2/server/src/: CAddressServer.cpp  CAddressServer.hpp  CServer.cpp  CServer.hpp  Makefile.am  exceptions.cpp  exceptions.hpp  main.cpp  protocol.hpp
enme438/: .project  build.xml  manifest.txt
pc2500-presentations/: Electronic Banking Security-memo.doc  Team Four.ppt  memo-3-4.txt  pc2500-final-exam.ppt  pc2500-final-exam.sxi  pc2500-presentation2.sxi  pc2500-presentation3.ppt  pc2500-presentation4.ppt
pc2500-quizes/: pc2500-quiz1.txt  pc2500-quiz2.txt  pc2500-quiz3.txt
pe1120-ballroom_dance/: tango.abw  (+3 more)
(+687 files in other folders)
